# Alfredo-AIChef

./: .env.local  .gitignore  .vercelignore
.github/workflows/: cicd.yml
AIApp/: .dockerignore  DevLazyCurl.sh  LazyCurl.sh  Makefile  aiappout.json  pyproject.toml  sample.json  sampledata.json
AIApp/Docker/: InferenceAPI.Dockerfile
AIApp/src/: Old_app.py  app.py
AIApp/tests/: testapp.py
alfredo-aichef/: .gitignore  README.md  package-lock.json  package.json
alfredo-aichef/src/: theme.ts
alfredo-aichef/src/app/: globals.css  layout.tsx  page.module.css  page.tsx  providers.tsx
alfredo-aichef/src/app/about/: page.tsx
alfredo-aichef/src/app/api/auth-check/: route.ts
alfredo-aichef/src/app/api/recipe/: route.ts
alfredo-aichef/src/app/auth/login/: page.tsx
alfredo-aichef/src/app/dashboard/: page.tsx
alfredo-aichef/src/app/hooks/: use-recipe-builder.ts
alfredo-aichef/src/app/sign-in/[[...rest]]/: page.tsx
alfredo-aichef/src/app/sign-up/[[...rest]]/: page.tsx
alfredo-aichef/src/components/common/: AuthCheck.tsx  about-card.tsx  auth-check.tsx  buttons-test.tsx  faq-accordion.tsx  gradient-title.tsx  theme-button.tsx
alfredo-aichef/src/components/feature/: about-card-grid.tsx  cta.tsx  faq-section.tsx  footer.tsx  header.tsx  ingredient-dg.tsx  landing.tsx  logo.tsx  main.tsx  quantity-textfield.tsx  recipe-builder-v2.tsx  recipe-builder.tsx
alfredo-aichef/src/components/feature/dashboard/: ingredient-dg.tsx  ingredient-select.tsx  meal-select.tsx  (+4 more)
alfredo-aichef/src/constants/: ingredients.ts
alfredo-aichef/src/store/: theme.tsx
(+8 files in other folders)
