[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "KazuhiraBenedictMiller",email = "aaserravalle.py@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-google-genai (>=2.0.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

